--- a/PokedexWeb/PokedexWeb/appsettings.json
+++ b/PokedexWeb/PokedexWeb/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"connData": "Server=srv863.hstgr.io;Port=3306;User=u484426513_pac324;Password=B&XWouC#9Ef;Database=u484426513_pac324;"
+    "connData": "Server=localhost;Port=3306;User=root;Password=1234;Database=pokedex;"
+  }
 }
