--- a/PokedexWeb/PokedexWeb/appsettings.json
+++ b/PokedexWeb/PokedexWeb/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"connData": "Server=srv863.hstgr.io;Port=3306;User=u484426513_pac324;Password=B&XWouC#9Ef;Database=u484426513_pac324;"
-    "connData": "Server=localhost;Port=3306;User=root;Password=Qwer1234!;Database=pokedex;"
+    "connData": "Server=localhost;Port=3306;User=root;Password=1234;Database=pokedex;"
   }
 }
